# vst3cpptest

./: .gitmodules  CMakeLists.txt  README.md
misc/: info.plist
src/: plugin.cpp  vst3_scu.cpp
